index and styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </video>
                         </div>
                     </div>
-                    <div class="about-column">
+                    <div class="about-column" id="about-column-text">
                         <p id="about-text">Will-O-Wicks is a small candle business that takes pride in creating a story with our candles.</p>
                         <p id="about-text">Candles are hand-poured with soy wax and are inspired by the many exciting adventures that YOU create.</p>
                         <ul class="about-list">
