--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="about-row">
                     <div class="about-column">
                         <div class="video-container">
-                            <video id="video" controls muted autoplay loop> 
+                            <video id="video" muted autoplay loop> 
                                 <source id="about-video" src="content\Video.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
